# miniarm

./: LICENSE  README.md  dune-project  example.arm  miniarm.opam  shell.nix
.github/workflows/: workflow.yml
lib/: ast.ml  dune  exec.ml  grammar.mly  lexer.mll  machine.ml  machine.mli  num.ml  num.mli  parser.ml
test/: dune  expect.ml  main.ml
